# tarotnpc

./: .sample.env  README.md  main.py  pyproject.toml
data/: major_arcana.yaml  minor_arcana.yaml  prompts.yaml
tarot/: card.py
tarotnpc/: __init__.py  base.py  card.py  llm.py  prompts.py
