[tool.poetry]
name = "tarotnpc"
version = "0.1.0"
description = "Tarot card-based generator for NPCs and characters"
authors = ["Jonathan Law <jonathan.law@hey.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
openai = "^1.55.1"
python-dotenv = "^1.0.1"
strictyaml = "^1.7.3"

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
isort = "^5.13.2"
ruff = "^0.8.0"
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
